# test

./: README.md  cmake.md  pytorch 学习.md  上交2021开源环境配置.md  使用 PPA安装gcc11和g++11.md  啊啊啊.md  快捷键.md  有的没的.md
Func/: Input.txt
Func/include/SelectFunc/: SelectFunc.h
Func/include/SplitString/: SplitString.h
Func/include/Template/: Template.h
Func/include/WriteToFile/: WriteToFile.h
Func/src/: SelectFunc.cpp  SplitString.cpp  Template.cpp  WriteToFile.cpp
c++/Qt_test/: CMakeLists.txt
c++/c++_learning/: CMakeLists.txt  main.cpp
c++/opencv_test/: CMakeLists.txt  main.cpp
python/: Capture images.py  capture_test.py  do_txt.py  photo capture.py  read_camera_save_video.py
python/serial/: Serial port_ID.py  main.py
python/thread/: thread.py  thread1.py
pytorch/: pytorch.ipynb
sh_test/: arr_1.sh  arr_2.sh  echo.sh  echo_1.sh  expr.sh  expr_2.sh  expr_3.sh  printf.sh  test.sh  test_1.sh  test_2.sh  test_3.sh  test_4.sh  test_5.sh
test/: a
